Updated pom in preparation for deploy.

--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,13 @@
         </developer>
     </developers>
 
-    <!-- scm>
-        <connection>scm:git:https://github.com/AuDigitalHealth/clinical-document-library-java.git
+    <scm>
+        <connection>scm:git:https://github.com/AuDigitalHealth/cda-schema-java.git
         </connection>
         <developerConnection>
-            scm:git:https://github.com/AuDigitalHealth/clinical-document-library-java.git
+            scm:git:https://github.com/AuDigitalHealth/cda-schema-java.git
         </developerConnection>
-        <url>https://github.com/AuDigitalHealth/clinical-document-library-java.git</url>
+        <url>https://github.com/AuDigitalHealth/cda-schema-java.git</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -44,7 +44,7 @@
             <id>nexus-releases</id>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
-    </distributionManagement -->
+    </distributionManagement>
 
     <repositories>
         <repository>
@@ -149,7 +149,7 @@
                 <version>3.0.0-M4</version>
                 <configuration>
                     <showSuccess>false</showSuccess>
-                    <title>CDA Java Library Tests Output</title>
+                    <title>CDA Schema Java Tests Output</title>
                     <outputDirectory>${basedir}/target/surefire-reports</outputDirectory>
                 </configuration>
             </plugin>
