Moved licenses section to top of file similar to Maven examples. Removed repositories section, as recommended by Maven. (https://maven.apache.org/repository/guide-central-repository-upload.html)

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,14 @@
     <description>Java classes for HL7 XML generation and checking</description>
     <url>https://github.com/AuDigitalHealth/cda-schema-java</url>
 
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <developers>
         <developer>
             <name>Admin Open Source</name>
@@ -45,13 +53,6 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
     </distributionManagement>
-
-    <repositories>
-        <repository>
-            <id>central</id>
-            <url>https://repo.maven.apache.org/maven2/</url>
-        </repository>
-    </repositories>
 
     <dependencies>
         <dependency>
