--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>au.gov.digitalhealth</groupId>
     <artifactId>cda-schema</artifactId>
-    <version>2.1.1</version>
+    <version>2.1.2-SNAPSHOT</version>
     <name>CDA Schema</name>
     <description>Java classes for HL7 XML generation and checking</description>
     <url>https://github.com/AuDigitalHealth/cda-schema-java</url>
